--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "graph": "nodemon graphql"
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
+    "graphql-yoga": "^1.18.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.2.5",
+    "nodemon": "^2.0.13",
     "prisma": "^3.2.1"
   }
 }
