--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
+    "bootstrap": "^5.0.0-beta3",
     "graphql-yoga": "^1.18.3",
     "next": "11.1.2",
     "react": "17.0.2",
