--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.1.3",
     "graphql-yoga": "^1.18.3",
     "next": "11.1.2",
+    "node-sass": "^4.14.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
