--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-sass": "^4.14.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
