--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.1.3",
     "graphql-yoga": "^1.18.3",
+    "install": "^0.13.0",
     "next": "11.1.2",
     "node-sass": "^4.14.1",
     "react": "17.0.2",
