--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "graphql": "^15.6.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
+    "multer": "^1.4.3",
     "next": "11.1.2",
+    "next-connect": "^0.11.0",
     "node-sass": "^4.14.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
