--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
