--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "multer": "^1.4.3",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
