--- a/example.env
+++ b/example.env
@@ -1,1 +1,19 @@
-DATABASE_URL="<the db url>"
+# Set to production when deploying to production
+NODE_ENV=development
+
+# Database URL
+DATABASE_URL=<YOUR_DATABASE_URL>
+
+# Apollo Graphql client server URI
+APOLLO_URI=<YOUR_APOLLO_URI>
+
+# Firebase Variables
+NEXT_PUBLIC_FIREBASE_API_KEY=<YOUR_API_KEY>
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=<YOUR_DOMAIN>
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=<YOUR_PROJECT_ID>
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=<YOUR_STORAGE_BUCKET>
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=<YOUR_MESSAGING_SENDER_ID>
+NEXT_PUBLIC_FIREBASE_APP_ID=<YOUR_APP_ID>
+
+# Google Places API
+NEXT_PUBLIC_GOOGLE_API_KEY=<YOUR_GOOGLE_PLACES_API_KEY>
